--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "express-session": "~1.17.1",
-    "mongodb": "^3.6.1",
+    "mongodb": "5.5",
     "passport": "^0.4.1",
     "passport-github": "~1.1.0",
     "passport-local": "~1.0.0",
     "passport.socketio": "~3.7.0",
     "pug": "~3.0.0",
-    "socket.io": "~2.3.0"
+    "socket.io": "~2.3.0",
+    "uri-js": "^4.2.2",
+    "userland": "^0.4.1"
   },
   "keywords": [
     "node",
@@ -32,6 +34,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "punycode": "^2.3.1"
   }
 }
