--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcrypt": "~5.0.0",
+    "bcrypt": "^5.1.1",
     "connect-mongo": "~3.2.0",
     "cookie-parser": "~1.4.5",
     "dotenv": "^8.6.0",
